final changes with new llm llama-3.1-8b-instant